# zksync-crypto-c

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yml  release.yml
example-c/: main.c
zks-crypto-c/: Cargo.toml  build.rs  cbindgen.toml  zks_crypto.h
zks-crypto-c/src/: lib.rs  utils.rs
